--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "/home/aanish/Desktop/flutter/blogapp/linux"
+    "cmake.sourceDirectory": "/home/aanish/Desktop/flutter/blogapp/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
